# RigidChipsHD

./: .gitignore  CMakeLists.txt  GRigid.cpp  GRigid.hpp  README.md  Rigid.rc  Rigid8.sln  Rigid8.vcxproj  Rigidmain.cpp  Rigidmain.h  d3dapp.cpp  diutil.cpp  script.cpp
Resources/: ARM.x  Basic.txt  Chip.x  Chip2.x  ChipH.x  Core.x  Jet.x  Jet2.x  NWheel.dds  NWheel2.X  Rudder.dds  Rudder.x  RudderF.x  System.rcs  Trim.x  TrimF.x  Type0.x  Type1.x  Type2.x  Type3.x  Type4.x  Type5.x  Water.dds  Wheel.dds  Wheel2.X  Wheel2.dds  WheelT.x  skybox.x
game/Resources/: ARM.dds  ARM.x  BALL.dds  Basic.txt  Bullet2.x  CHIP.dds  CHIPH.dds  CORE.dds  Chip.x  Chip2.x  ChipH.x  Core.x  Jet.dds  Jet.x  Jet2.x  NWheel.x  Rudder.x  RudderF.x  System.rcs  TRIM.dds  Trim.x  TrimF.x  Type0.x  Type1.x  Type2.x  Type3.x  Type4.x  Type5.x  Wheel2.X  WheelT.x  skybox.x
libs/Lua/: CMakeLists.txt
libs/Lua/src/: CMakeLists.txt
src/: CMakeLists.txt  GDPlay.hpp  GLand.hpp  GParticle.hpp  GPlayers.h  GRigid.cpp  GRigid.hpp  GVector.cpp  GVector.hpp  Rigidmain.cpp  Rigidmain.h  d3dapp.cpp  d3dfile.cpp  d3dfile.h  diutil.cpp  luaScript.cpp  luaScript.hpp  luaSub.cpp  luaSub.hpp  luaSystem.cpp  luaSystem.hpp  lua_5_3_compat.c  lua_5_3_compat.h  readData.cpp  readSub.cpp  script.cpp
src/audio/: audioManager.cpp  audioManager.h  dsutil.cpp  midiUtil.h
src/res/: Rigid.rc  resource.h
